--- a/src/containers/header/Header.css
+++ b/src/containers/header/Header.css
@@ -1,42 +1,66 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
+
+.body {
+  font-family: 'Merriweather', serif;
+}
 .nav-container {
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    display: flex;
-    height: 75px;
-    padding-top: 0;
-    padding-bottom: 0;
-    align-items: center;
-    border-bottom: 1px solid #f1f1f1;
-    background-color: hsla(0,0%,100%,.94);
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  height: 75px;
+  padding-top: 0;
+  padding-bottom: 0;
+  align-items: center;
+  border-bottom: 1px solid #f1f1f1;
+  background-color: hsla(0, 0%, 100%, 0.94);
 }
 
-.nav-logo{
-    font-size: xx-large;
-    margin: 2em;
-    
+.nav-logo {
+  font-size: xx-large;
+  margin: 2em;
+  font-family: 'Merriweather', serif;
+}
+.nav-:hover {
+    cursor:pointer;
+
 }
 
-.nav-menu{
-    padding: 20px;
-    margin: auto;
-    text-align: center;
+.nav-menu {
+  padding: 20px;
+  margin: auto;
+  text-align: center;
+}
+.main-nav-link.content-mypage:hover{
+    text-decoration:underline;
+    cursor: pointer;
+}
+.main-nav-link.content-joblist:hover{
+    text-decoration:underline;
+    cursor: pointer;
+}
+.main-nav-link.content-analysis:hover{
+    text-decoration:underline;
+    cursor: pointer;
+}
+.main-nav-link.content-login:hover{
+    text-decoration:underline;
+    cursor: pointer;
 }
 
 .main-nav-link {
-    margin-right: 2.5em;
-    padding: .5em 0;
-    color: #777;
-    font-size: 1em;
-    font-weight: 600;
-
+  margin-right: 2.5em;
+  padding: 0.5em 0;
+  color: #777;
+  font-size: 1.2em;
+  font-weight: 600;
 }
 
-.nav-profile.img{
-    margin: 1em;
+.nav-profile.img {
+  margin: 1em;
 }
-.nav-profile.nick{
-    margin: 1em;
+.nav-profile.nick {
+  margin: 1em;
 }
