components>job : Complete CSS

--- a/src/containers/job/list/JobDetail.css
+++ b/src/containers/job/list/JobDetail.css
@@ -5,7 +5,7 @@
 }
 
 .linkBtn {
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 /* .jobpostItem {
@@ -19,4 +19,29 @@
   text-align: center;
   font-size: 0.85714286rem;
   padding: 0.35rem;
+}
+
+/* 회사, 채용공고, 메모 박스 간 간격*/
+
+.jobContainer {
+  margin: 30px;
+}
+
+/* Container 안의 항목별(ex. 회사소개, 산업분야) 간격 */
+
+.ItemsInContainer {
+  margin: 30px 30px 20px 10px;
+}
+
+/* Container 안의 항목 제목(ex. 회사소개, 산업분야) bold 처리 */
+
+.jobpostItem {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+/* 회사명 글자 크기  */
+
+#brand {
+  font-size: large;
 }
