--- a/src/components/common/loading.css
+++ b/src/components/common/loading.css
@@ -5,8 +5,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background: #f0eeee;
-  opacity: 0.7;
+  background: #f7f7f7;
+  /* opacity: 1; */
   z-index: 1000000000;
 }
 
@@ -23,6 +23,7 @@
   height: 11px;
   border-radius: 50%;
   background: black;
+  opacity: 0.6;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
