--- a/src/components/common/loading.css
+++ b/src/components/common/loading.css
@@ -1,12 +1,12 @@
 #loading {
   position: absolute;
-  margin: auto;
+  margin: 0px;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background: #f7f7f7;
-  /* opacity: 1; */
+  background: #bbc5d8;
+  opacity: 0.6;
   z-index: 1000000000;
 }
 
@@ -22,7 +22,7 @@
   width: 11px;
   height: 11px;
   border-radius: 50%;
-  background: black;
+  background: #fff;
   opacity: 0.6;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
