edit loading css

--- a/src/components/common/loading.css
+++ b/src/components/common/loading.css
@@ -22,7 +22,7 @@
   width: 11px;
   height: 11px;
   border-radius: 50%;
-  background: #fff;
+  background: black;
   opacity: 0.6;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
