--- a/src/containers/login/login.css
+++ b/src/containers/login/login.css
@@ -16,3 +16,12 @@
 #naver {
   background-color: #03c73c;
 }
+/* 
+#container-login {
+  min-height: 100%;
+  background-image: url(../../static/image/computer-1185637_1280.jpg);
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
