--- a/src/containers/header/HeaderContainer.css
+++ b/src/containers/header/HeaderContainer.css
@@ -1,21 +1,7 @@
-/* @import url('https://fonts.googleapis.com/css?family=Merriweather'); */
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
 
 .body {
   font-family: 'Merriweather', serif;
-}
-.nav-container {
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  display: flex;
-  height: 75px;
-  padding-top: 0;
-  padding-bottom: 0;
-  align-items: center;
-  border-bottom: 1px solid #f1f1f1;
-  background-color: hsla(0, 0%, 100%, 0.94);
 }
 
 .nav-logo {
@@ -29,11 +15,6 @@
   cursor: pointer;
 }
 
-.nav-menu {
-  padding: 20px;
-  margin: auto;
-  text-align: center;
-}
 .main-nav-link.content-mypage:hover {
   text-decoration: underline;
   cursor: pointer;
