--- a/src/containers/job/post/GoogleVisionPortal.css
+++ b/src/containers/job/post/GoogleVisionPortal.css
@@ -4,6 +4,8 @@
   padding: 10px;
   align-items: center;
   box-sizing: border-box;
+  border-radius: 10%;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
 .googleVisionPortal {
@@ -11,5 +13,15 @@
 }
 
 .googleVisionText {
-  margin: 5px 22px 10px 22px;
+  margin: 0px;
+  width: 20rem;
+  height: 334px;
+}
+
+.googleVisionText-none {
+  /* margin: 0px; */
+  width: 300px;
+  /* height: 334px; */
+  text-align: center;
+  margin-bottom: 1rem;
 }
