dealing with job errors

--- a/src/containers/header/HeaderContainer.css
+++ b/src/containers/header/HeaderContainer.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Merriweather'); */
+@import url('https://fonts.googleapis.com/css?family=Merriweather');
 
 .body {
   font-family: 'Merriweather', serif;
