--- a/src/containers/job/list/JobList.css
+++ b/src/containers/job/list/JobList.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Mate+SC'); */
+@import url('https://fonts.googleapis.com/css?family=Mate+SC');
 
 .job-list.brand {
   font-family: 'Mate SC', serif;
